# narr_ai_tive

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
app/: __init__.py  chapter.py  character.py  context.py  export.py  interactive.py  main.py  path_utils.py  plot.py  prompt.py  semantic_search.py  session.py  setup_logging.py  story.py  text_processing.py  tui.py  utils.py  world.py
data/: character_profiles.json  world_details.json
docs/: api_reference.md  app_scripts.md  chapter.md  configuration.md  context.md  embeddings_setup.md  installation.md  interactive.md  json_schemas.md  navigation_guide.md  prompt.md  semantic_search.md  tui.md  usage.md  utils.md
roadmap/: 0. Table of Contents.md  1. Enhanced User Interaction for World Details.md  2. Deeper Character Profile Interaction.md  4. Advanced Customization and Control.md  III. Enhancing Prompt and Story Structure.md  V. Implementation Considerations.md
