[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narr-ai-tive"
dynamic = ["version"]
description = 'AI Story Gen'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dustin Smith", email = "whoisdsmith@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Dustin Smith/narr-ai-tive#readme"
Issues = "https://github.com/Dustin Smith/narr-ai-tive/issues"
Source = "https://github.com/Dustin Smith/narr-ai-tive"

[tool.hatch.version]
path = "src/narr_ai_tive/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/narr_ai_tive tests}"

[tool.coverage.run]
source_pkgs = ["narr_ai_tive", "tests"]
branch = true
parallel = true
omit = [
  "src/narr_ai_tive/__about__.py",
]

[tool.coverage.paths]
narr_ai_tive = ["src/narr_ai_tive", "*/narr-ai-tive/src/narr_ai_tive"]
tests = ["tests", "*/narr-ai-tive/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
